# SSL_Anti-spoofing

./: .gitignore  Docker_run.bat  Dockerfile  Dockerfile37  Dockerfile37s  Inference_SSL_DF.py  Inference_SSL_LA.py  Multikol_inference.py  data_utils_SSL.py  docker-entrypoint.sh  evaluate_2021_DF.py  evaluate_2021_LA.py  evaluate_DF.py  get_fluc_in_.sh  main_SSL_DF.py  meta2simpleEval.sh  model.py  pyproject.toml  remove_sil.ipynb  run_DF.sh  run_LA.sh  run_inference.sh  service_main.py
ASVspoof2021_DF_eval/flac/: DF_E_2008899_spoof.flac
app/: main.py
app/api/v1/: api.py
app/core/: config.py
app/schemas/: enums.py  models.py
app/services/: demo.py  process_wav.py
model/: readme.txt
results/20231001_1107/: Duration_Analysis.ipynb  run_Duration_sliced_DF_interface.sh
